sidebar: fix overflow

--- a/source/css/layout/home-sidebar.styl
+++ b/source/css/layout/home-sidebar.styl
@@ -93,6 +93,7 @@
   }
 
   .sidebar-links {
+    overflow hidden
 
     redefine-container(true, 0.5, 1.02, 15px, 0)
 
